updated video controller and service
